<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2010 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<resources>
  <string name="Title">Title</string>
  <string name="Throttle">Throttle</string>
  <string name="Locomotives">Locomotives</string>
  <string name="Outputs">Outputs</string>
  <string name="Routes">Routes</string>
  <string name="Switches">Switches</string>
  <string name="Signals">Signals</string>
  <string name="Blocks">Blocks</string>
  <string name="Schedules">Schedules</string>
  <string name="System">System</string>
  <string name="Power_ON">Power ON</string>
  <string name="Power_OFF">Power OFF</string>
  <string name="Init_Field">Init Field</string>
  <string name="Auto_ON">Auto ON</string>
  <string name="Auto_Start">Auto Start</string>
  <string name="Release">RE</string>
  <string name="none">none</string>
  <string name="START">START</string>
  <string name="STOP">STOP</string>
  <string name="HalfAuto">Half Auto</string>
  <string name="SetInBlock">Set in block</string>
  <string name="Normal">Normal</string>
  <string name="Swapped">Swapped</string>
  <string name="Placing">Placing</string>
  <string name="Automatic">Automatic</string>
  <string name="Settings">Settings</string>
  <string name="Loco">Loco</string>
  <string name="Close">Close</string>
  <string name="Open">Open</string>
  <string name="Connect">Connect</string>
  <string name="Menu">Menu</string>
  <string name="Layout">Layout</string>
  <string name="Level">Level</string>
  <string name="Quit">Quit</string>
  <string name="Direction">Direction</string>
  <string name="Host">Host</string>
  <string name="Port">Port</string>
  <string name="Start">ST</string>
  <string name="FunctionGroup">FG</string>
  <string name="Lights">Lights</string>
  <string name="Recent">Recent</string>
  <string name="Previous">Previous</string>
  <string name="Next">Next</string>
  <string name="Track">Track</string>
  <string name="SetLoco">Set Loco</string>
  <string name="ResetLoco">Reset Loco</string>
  <string name="quit">Quit</string>
  <string name="ReallyQuit">Quit andRoc?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="start_all_locos">Start all locos in auto mode?</string>
  <string name="Preferences">Preferences</string>
  <string name="Monitoring">System monitoring</string>
  <string name="Address">Address</string>
  <string name="Runtime">Runtime</string>
  <string name="KeepScreenOn">Keep screen on</string>
  <string name="ClearRecent">Clear recent list</string>
  <string name="R2RHost">R2R Address</string>
  <string name="R2RPort">R2R Port</string>
  <string name="Accessory">Accessory</string>
  <string name="BackAgainQuit">Press Back once more to exit.</string>
  <string name="LocoSetup">Loco setup</string>
  <string name="FreeBlock">Free Block</string>
  <string name="OpenBlock">Open Block</string>
  <string name="CloseBlock">Close Block</string>
  <string name="OpenEnter">Open enter</string>
  <string name="CloseEnter">Close enter</string>
  <string name="OpenExit">Open exit</string>
  <string name="CloseExit">Close exit</string>
  <string name="Compress">Compress</string>
  <string name="SelectBlock">Select Block</string>
  <string name="BlockList">Block list</string>
  <string name="SelectSchedule">Select Schedule</string>
  <string name="ScheduleList">Schedule list</string>
  <string name="Modview">Module view</string>
  <string name="Read">Read</string>
  <string name="Write">Write</string>
  <string name="CV">CV</string>
  <string name="Value">Value</string>
  <string name="DeviceID">DeviceID</string>
  <string name="BlockID">BlockID</string>
  <string name="StageID">StageID</string>
  <string name="Description">Description</string>
  <string name="Roadname">Roadname</string>
  <string name="Vmax">Vmax</string>
  <string name="Vmid">Vmid</string>
  <string name="Vmin">Vmin</string>
  <string name="LoadingPlan">Loading plan...</string>
  <string name="License">License</string>
  <string name="Version">Version</string>
  <string name="ThrottleID">Throttle ID</string>
  <string name="CreatingModview">Creating module view...</string>
  <string name="LocoProps">Loco properties</string>
  <string name="Info">Info</string>
  <string name="Actions">Actions</string>
  <string name="Turntable">Turntable</string>
  <string name="FiddleYard">Fiddle Yard</string>
  <string name="Swap">Swap</string>
  <string name="SelectLoco">Select loco</string>
  <string name="Dispatch">Dispatch</string>
  <string name="AcceptIdent">Accept BiDi Ident</string>
  <string name="EmergencyStop">Emergency stop</string>
  <string name="SmallThrottle">Small throttle</string>
  <string name="ControlCode">Ctrl code</string>
  <string name="Zoom">Zoom</string>
  <string name="Unlock">Unlock</string>
  <string name="ImagesOnDemand">Images on demand</string>
  <string name="SortByAddr">Sort by address</string>
  <string name="PowerOff4EBreak">Power off for EStop</string>
  <string name="Color">Color</string>
  <string name="SelectColor">Select background color</string>
  <string name="Green">Green</string>
  <string name="Grey">Grey</string>
  <string name="Blue">Blue</string>
  <string name="LocoCatList">Sort by category</string>
  <string name="Steam">Steam</string>
  <string name="Diesel">Diesel</string>
  <string name="Electric">Electric</string>
  <string name="Trainset">Trainset</string>
  <string name="Special">Special</string>
  <string name="UseAllSpeedSteps">Use all speed steps</string>
  <string name="SyncSpeed">Synchronise speed</string>
  <string name="View">View</string>
  <string name="Add">Add</string>
  <string name="Delete">Delete</string>
  <string name="GuestLoco">Guest Loco</string>
  <string name="ShortID">Short ID</string>
  <string name="Speedsteps">Speedsteps</string>
  <string name="Protocol">Protocol</string>
  <string name="ButtonView">Buttons for speed</string>
  <string name="VDelta">Step increment</string>
  <string name="Car">Car</string>
  <string name="ThrottleWidth">Throttle width</string>
  <string name="ThrottleHeight">Throttle height</string>
  <string name="Category">Category</string>
  <string name="CatEngine">Engine</string>
  <string name="CatEra">Era</string>
  <string name="CatRoadname">Roadname</string>
</resources>
