<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2010 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="300dp" android:layout_height="fill_parent"
  android:orientation="vertical" android:padding="3px">
  
<CheckBox android:text="@string/Monitoring" android:id="@+id/prefMonitoring" 
android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>
<CheckBox android:text="@string/KeepScreenOn" android:id="@+id/prefKeepScreenOn" 
android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>
<CheckBox android:text="@string/Modview" android:id="@+id/prefModview" 
android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>
      <Button android:text="@string/ClearRecent"
        android:id="@+id/prefClearRecent" android:layout_width="fill_parent"
        android:layout_height="wrap_content"></Button>
        
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView android:text="@string/R2RHost" android:layout_width="0px" android:layout_weight="30" android:layout_height="wrap_content"/>
<EditText android:text="224.0.0.1" android:id="@+id/prefR2RHost" 
android:layout_width="0px" android:layout_height="wrap_content" android:layout_weight="70"></EditText>
</LinearLayout>

<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView android:text="@string/R2RPort" android:layout_width="0px" android:layout_weight="30" android:layout_height="wrap_content"/>
<EditText android:text="1234" android:id="@+id/prefR2RPort" 
android:layout_width="0px" android:layout_height="wrap_content" android:layout_weight="70"></EditText>
</LinearLayout>

</LinearLayout>
