<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2012 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content" android:orientation="vertical" 
  android:layout_height="wrap_content" android:padding="3px">
  <TextView android:text="@string/StageID" android:id="@+id/stageID"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:textStyle="bold"></TextView>
    
  <LinearLayout android:layout_width="fill_parent" 
      android:layout_height="wrap_content" android:orientation="horizontal">  
	  <Button android:text="@string/CloseEnter" android:textStyle="bold"
	    android:id="@+id/stageEnter" android:layout_width="wrap_content"
	    android:layout_height="wrap_content" android:layout_weight="50"/>
	  <Button
	    android:text="@string/CloseExit" android:textStyle="bold" android:id="@+id/stageExit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" android:layout_weight="50"/>
  </LinearLayout>
  <Button
    android:text="@string/Compress" android:textStyle="bold" android:id="@+id/stageCompress"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>
  
    
</LinearLayout>

