<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2010 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:orientation="vertical"
  android:layout_height="fill_parent" android:padding="3px">
  <ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
      android:layout_height="fill_parent" android:orientation="vertical">
      <net.rocrail.androc.widgets.LocoImage
        android:id="@+id/locoImage" android:layout_width="236px"
        android:clickable="true" android:layout_height="60px"
        android:src="@drawable/noimg" android:padding="5dp" />

      <LinearLayout android:paddingTop="10dp" android:id="@+id/locoLayout4"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/locoLabVmax" android:text="@string/Vmax"
          android:paddingLeft="5px" android:layout_height="wrap_content"
          android:layout_width="0px" android:layout_weight="20"></TextView>
        <SeekBar android:id="@+id/locoVmax" android:max="100"
          android:progress="0" android:layout_width="0px"
          android:layout_weight="80" android:layout_height="wrap_content"
          android:paddingRight="5px" />
      </LinearLayout>
      <LinearLayout android:paddingTop="10dp" android:id="@+id/locoLayout5"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/locoLabVmid" android:text="@string/Vmid"
          android:paddingLeft="5px" android:layout_height="wrap_content"
          android:layout_width="0px" android:layout_weight="20"></TextView>
        <SeekBar android:id="@+id/locoVmid" android:max="100"
          android:progress="0" android:layout_width="0px"
          android:layout_weight="80" android:layout_height="wrap_content"
          android:paddingRight="5px" />
      </LinearLayout>
      <LinearLayout android:paddingTop="10dp" android:id="@+id/locoLayout6"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/locoLabVmin" android:text="@string/Vmin"
          android:paddingLeft="5px" android:layout_height="wrap_content"
          android:layout_width="0px" android:layout_weight="20"></TextView>
        <SeekBar android:id="@+id/locoVmin" android:max="100"
          android:progress="0" android:layout_width="0px"
          android:layout_weight="80" android:layout_height="wrap_content"
          android:paddingRight="5px" />
      </LinearLayout>

      <LinearLayout android:paddingTop="10dp" android:id="@+id/locoLayout7"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/locoLabCV" android:text="@string/CV"
          android:textStyle="bold" android:paddingLeft="5px"
          android:layout_height="wrap_content" android:layout_width="0px"
          android:layout_weight="50"></TextView>
        <TextView android:id="@+id/locoLabVal" android:text="@string/Value"
          android:textStyle="bold" android:paddingLeft="5px"
          android:layout_height="wrap_content" android:layout_width="0px"
          android:layout_weight="50"></TextView>
      </LinearLayout>
      <LinearLayout android:id="@+id/locoLayout8"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <EditText android:numeric="decimal" android:id="@+id/locoCV"
          android:text="0" android:paddingLeft="5px"
          android:layout_height="wrap_content" android:gravity="center"
          android:layout_width="0px" android:layout_weight="50" />
        <EditText android:numeric="decimal" android:id="@+id/locoVal"
          android:text="0" android:paddingLeft="5px"
          android:layout_height="wrap_content" android:gravity="center"
          android:layout_width="0px" android:layout_weight="50" />
      </LinearLayout>
      <LinearLayout android:id="@+id/locoLayout9"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/locoCVWrite" android:text="@string/Write"
          android:textSize="20sp" android:paddingLeft="5px"
          android:layout_height="60dp" android:layout_width="0px"
          android:layout_weight="50" />
        <Button android:id="@+id/locoCVRead" android:text="@string/Read"
          android:textSize="20sp" android:paddingLeft="5px"
          android:layout_height="60dp" android:layout_width="0px"
          android:layout_weight="50" />
      </LinearLayout>
      <LinearLayout android:id="@+id/locoLayout10"
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/locoDispatch" android:text="@string/Dispatch"
          android:textSize="20sp" android:paddingLeft="5px"
          android:layout_height="60dp" android:layout_width="0px"
          android:layout_weight="100" />
      </LinearLayout>

    </LinearLayout>
  </ScrollView>
</LinearLayout>
