<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2010 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  android:orientation="vertical" android:padding="5px">
    <LinearLayout android:id="@+id/fyLayout4" android:orientation="vertical"
      android:layout_width="fill_parent" android:layout_height="wrap_content">
      <net.rocrail.androc.widgets.LEDButton android:text="@string/Open" android:textStyle="bold"
        android:id="@+id/fyOpen" android:layout_width="fill_parent" 
        android:layout_weight="50" android:layout_height="50dp"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/fyLayout1"
      android:layout_width="fill_parent" android:layout_height="wrap_content">
      <net.rocrail.androc.widgets.LEDButton android:text="@string/Previous" android:textStyle="bold"
        android:id="@+id/fyPrev" android:layout_width="0px" 
        android:layout_weight="50" android:layout_height="60dp"/>
      <net.rocrail.androc.widgets.LEDButton android:text="@string/Next" android:textStyle="bold"
        android:id="@+id/fyNext" android:layout_width="0px" 
        android:layout_weight="50" android:layout_height="60dp"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/fyLayout3" android:orientation="vertical"
      android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Spinner android:id="@+id/fyTracks" android:textStyle="bold" android:layout_width="fill_parent"
          android:layout_height="wrap_content" android:drawSelectorOnTop="true" />
      <Button
        android:text="@string/Track" android:textStyle="bold" android:id="@+id/fyGotoTrack"
        android:layout_width="fill_parent"
        android:layout_height="70dp" />
    </LinearLayout>
</LinearLayout>
