<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2012 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:padding="3dp">
    
  <LinearLayout android:layout_width="fill_parent" android:padding="2dp"
      android:layout_height="wrap_content" android:orientation="horizontal">  
    <TextView android:id="@+id/labGuestAddress" android:textStyle="bold" android:text="@string/Address"
      android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingRight="4dp"/>
    <EditText android:id="@+id/guestAddress" android:numeric="decimal"
	    android:text="" android:layout_width="fill_parent"
	    android:layout_height="wrap_content" />
  </LinearLayout>
    
  <LinearLayout android:layout_width="fill_parent" android:padding="2dp"
      android:layout_height="wrap_content" android:orientation="horizontal">  
    <TextView android:id="@+id/labShortID" android:textStyle="bold" android:text="@string/ShortID"
      android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingRight="4dp"/>
    <EditText android:id="@+id/guestShortID"
      android:text="" android:layout_width="fill_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
    
	<LinearLayout android:orientation="horizontal" android:padding="2dp"
	  android:layout_width="fill_parent" android:layout_height="wrap_content">
	  <TextView android:text="@string/Speedsteps" 
	    android:id="@+id/labSpeedsteps" android:textStyle="bold"
	    android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:paddingRight="4dp"></TextView>
	  <RadioButton android:id="@+id/Speedsteps14" android:text="14" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	  <RadioButton android:id="@+id/Speedsteps28" android:text="28" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	  <RadioButton android:id="@+id/Speedsteps128" android:text="128" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal" android:padding="2dp"
	  android:layout_width="fill_parent" android:layout_height="wrap_content">
	  <TextView android:text="@string/Protocol" 
	    android:id="@+id/labProtocol" android:textStyle="bold"
	    android:layout_width="wrap_content" android:layout_height="wrap_content"
	    android:paddingRight="4dp"></TextView>
	  <RadioButton android:id="@+id/ProtocolDCC" android:text="DCC" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	  <RadioButton android:id="@+id/ProtocolMM" android:text="MM" android:paddingRight="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	</LinearLayout>
 
  <Button android:text="@string/Add" android:textStyle="bold"
    android:id="@+id/guestAdd" android:layout_width="fill_parent"
    android:layout_height="wrap_content"/>
      
</LinearLayout>
