<?xml version="1.0" encoding="utf-8"?>
<!--
 Rocrail - Model Railroad Software

 Copyright (C) 2002-2010 - Rob Versluis <r.j.versluis@rocrail.net>

 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.

 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="fill_parent">
  <TextView android:text="@string/BlockID" android:id="@+id/blockID"
    android:layout_width="fill_parent" android:layout_height="wrap_content"
    android:textStyle="bold"></TextView>
    
  <net.rocrail.androc.widgets.LocoImage android:id="@+id/blockLocoImage" android:layout_width="fill_parent"
    android:clickable="true" android:layout_height="60px"
    android:src="@drawable/noimg" android:padding="5dp"/>


  <Spinner android:id="@+id/blockLocos" android:textStyle="bold" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:drawSelectorOnTop="true" />
  <Button android:text="@string/Loco" android:textStyle="bold"
    android:id="@+id/blockLoco" android:layout_width="fill_parent"
    android:layout_height="70dp" android:textSize="20sp"/>
  <net.rocrail.androc.widgets.LEDButton
    android:text="@string/Open" android:textStyle="bold" android:id="@+id/blockOpen"
    android:layout_width="fill_parent" android:textSize="20sp"
    android:layout_height="70dp" />
    
    
</LinearLayout>
